--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "09a0714d-aa88-4daf-afa4-daa630fe6055"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
